--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -1,16 +1,4 @@
 {
-  "appTabWarn": "Zu viele Tabs",
-  "appTabWarnBody": "KeeWeb kann nicht in mehreren Browser-Tabs gleichzeitig genutzt werden, bitte schließen Sie diesen Tab.",
-  "setGenThemeTe": "Terminal",
-  "setGenNoRememberKeyFiles": "Nicht merken",
-  "setGenRememberKeyFilesData": "Im internen App-Speicher ablegen",
-  "setGenRememberKeyFilesPath": "Nur Speicherort der Schlüsseldateien merken",
-  "setGenLockHours": "Nach {} Stunden",
-  "setGenLockDay": "Nach einem Tag",
-  "setFileKdfParamsIter": "Iterationen",
-  "setFileKdfParamsMem": "Speicher in KB",
-  "setFileKdfParams": "Schlüsselableitungsfunktion",
-  "setFileKdfParamsPar": "Parallelismus",
   "months": [
     "Januar",
     "Februar",
@@ -70,6 +58,8 @@
   "group": "Gruppe",
   "noTitle": "Keinen Titel",
   "or": "oder",
+  "history": "Verlauf",
+  "template": "Template",
   "notImplemented": "Nicht implementiert",
   "saveChanges": "Änderungen speichern",
   "discardChanges": "Änderungen verwerfen",
@@ -77,7 +67,7 @@
   "shortcuts": "Tastenkürzel",
   "help": "Hilfe",
   "settings": "Einstellungen",
-  "history": "Verlauf",
+  "plugins": "Plugins",
   "cache": "Cache",
   "file": "Datei",
   "webdav": "WebDAV",
@@ -162,6 +152,9 @@
   "listNoWebsite": "keine Website",
   "listNoUser": "kein Benutzer",
   "listNoAttachments": "keine Anhänge",
+  "listAddTemplateHeader": "Templates",
+  "listAddTemplateBody1": "Templates ermöglichen es, Einträge mit nur einem Klick zu erstellen. Fügen Sie etwas zum Template-Eintrag hinzu und klicken Sie auf {}, um dieses Template zu benutzen.",
+  "listAddTemplateBody2": "Sie können Ihre Templates in der Gruppe \"{}\" finden.",
   "searchAddNew": "Hinzufügen",
   "searchSort": "Sortierung",
   "searchCreated": "Erstelldatum",
@@ -191,10 +184,7 @@
   "openDropHere": "Dateien hier ablegen",
   "openFailedRead": "Konnte die Datei nicht lesen",
   "openNothingFound": "Nichts gefunden",
-  "openNothingFoundBody": "Es konnten keine kompatiblen Dateine gefunden werden.",
-  "openNothingFoundBodyFolder": "Es wird im Ordner {} nach Dateien gesucht",
-  "openAppFolder": "App",
-  "openRootFolder": "Stammverzeichnis",
+  "openNothingFoundBody": "Es konnten keine kompatiblen Dateien gefunden werden.",
   "openSelectFile": "Datei auswählen",
   "openSelectFileBody": "Wählen Sie eine Datei zum Öffnen aus",
   "openPassFor": "Passwort für",
@@ -253,7 +243,7 @@
   "detAttachments": "Anhänge",
   "detDelFromTrash": "Aus dem Papierkorb löschen?",
   "detDelFromTrashBody": "Es wird keine Möglichkeit zur Wiederherstellung geben.",
-  "detDelFromTrashBodyHint": "Um alle Dateien aus dem Papierkorb zu entfernen, klicken Sie auf das \"Papierkorb leeren\" Icon im Papierkorb-Menüpunkt.",
+  "detDelFromTrashBodyHint": "Um alle Dateien aus dem Papierkorb zu entfernen, klicken Sie auf das \"Papierkorb leeren\"-Icon im Papierkorb-Menüpunkt.",
   "detFieldCopied": "Kopiert",
   "detFieldCopiedTime": "Kopiert für {} Sekunden",
   "detCopyHint": "Sie können den Inhalt eines Feldes kopieren, indem Sie auf seine Beschriftung klicken",
@@ -269,6 +259,7 @@
   "detClone": "Kopie erstellen",
   "detClonedName": "Kopieren",
   "detAutoType": "Auto-Type",
+  "detAutoTypeSettings": "Auto-Type Einstellungen",
   "detAutoTypeEnabled": "Auto-Type für diesen Eintrag aktivieren",
   "detAutoTypeSequence": "Tastensequenz",
   "detAutoTypeInput": "Eingabe",
@@ -279,7 +270,7 @@
   "detSetupOtpAlert": "QR-Code einscannen",
   "detSetupOtpAlertBody": "Bitte kopieren Sie den QR-Code, der auf der Autorisierungsseite angezeigt wird.",
   "detSetupOtpAlertBody1": "1. Gehen Sie zur Autorisierungsseite",
-  "detSetupOtpAlertBody2": "2. Machen Sie einen Screenshot des QR-Codes {}",
+  "detSetupOtpAlertBody2": "2. Erstellen Sie einen Screenshot des QR-Codes {}",
   "detSetupOtpAlertBody3": "3. Fügen Sie ihn hier ein {}",
   "detSetupOtpAlertBody3Mobile": "3. Markieren Sie ihn oder scannen Sie ihn mit Ihrer Kamera mit dem untenstehenden Markieren/Scannen-Button",
   "detSetupOtpAlertBody4": "Wenn Sie den Code nicht einscannen können, klicken Sie bitte auf \"Code manuell eingeben\"",
@@ -290,7 +281,7 @@
   "detOtpImageErrorBody": "Entschuldigung, wir konnten das Bildformat nicht lesen. Bitte kontaktieren Sie den Hersteller mit Einzelheiten zu diesem Fehler.",
   "detOtpImageReading": "QR-Code wird eingelesen...",
   "detOtpQrError": "QR-Code Lesefehler",
-  "detOtpQrErrorBody": "Entschuldigung, wir konnten den QR-Code nicht einlesen. Bitte versuchen Sie es noch einmal oder kontaktieren Sie den Hersteller mit Einzelheiten zu aufgetretenen Fehler.",
+  "detOtpQrErrorBody": "Der QR-Code konnte leider nicht eingelesen werden. Bitte versuchen Sie es noch einmal oder kontaktieren Sie den Hersteller mit Einzelheiten zum aufgetretenen Fehler.",
   "detOtpQrWrong": "Fehlerhafter QR-Code",
   "detOtpQrWrongBody": "Ihr QR-Code wurde erfolgreich eingelesen, enthält jedoch kein Einweg-Passwort.",
   "autoTypeEntryFields": "Feld-Platzhalter",
@@ -304,7 +295,6 @@
   "autoTypeHeader": "Auto-Type: Auswählen",
   "autoTypeMsgNoWindow": "Wir konnten den Titel des aktiven Fensters leider nicht auslesen. Fangen Sie einfach an zu tippen, um nach dem richtigen Eintrag zu suchen.",
   "autoTypeMsgMatchedByWindow": "Passwort auswählen für {}",
-  "autoTypeClearFilter": "Alle Einträge anzeigen",
   "autoTypeNoMatches": "keine passenden Einträge",
   "appSecWarn": "Unsichere Verbindung!",
   "appSecWarnBody1": "Sie haben diese App über eine ungesicherte Verbindung geöffnet, Sie könnten beobachtet und Ihre Passwörter könnten gestohlen werden. Wir empfehlen Ihnen dringend, die App hier nicht weiter zu nutzen, wenn Sie nicht genau wissen, was Sie tun.",
@@ -321,6 +311,9 @@
   "appSaveErrorBodyMul": "Automatisches Speichern fehlgeschlagen:",
   "appSettingsError": "Fehler beim Laden der App",
   "appSettingsErrorBody": "Es gab einen Fehler beim Laden der App-Einstellungen. Bitte überprüfen Sie die App URL oder kontaktieren Sie Ihren Systemadministrator.",
+  "appNotSupportedError": "Ihr Browser wird nicht unterstützt.",
+  "appTabWarn": "Zu viele Tabs",
+  "appTabWarnBody": "KeeWeb kann nicht in mehreren Browser-Tabs gleichzeitig genutzt werden, bitte schließen Sie diesen Tab.",
   "setGenTitle": "Allgemeine Einstellungen",
   "setGenUpdate": "Update",
   "setGenNewVersion": "Eine neue Version der App ist verfügbar und wurde heruntergeladen",
@@ -350,11 +343,13 @@
   "setGenThemeFb": "Flat blue",
   "setGenThemeDb": "Dark brown",
   "setGenThemeWh": "White",
+  "setGenThemeTe": "Terminal",
   "setGenThemeHc": "High contrast",
   "setGenThemeSd": "Solarized dark",
   "setGenThemeSl": "Solarized light",
   "setGenLocale": "Sprache",
   "setGenLocImprove": "die App in Ihre Sprache übersetzen",
+  "setGenLocOther": "Andere Sprachen sind als Plugins verfügbar.",
   "setGenLocMsg": "Helfen Sie mit, KeeWeb zu übersetzen",
   "setGenLocMsgBody": "Sie möchten KeeWeb in Ihrer Sprache benutzen? Helfen Sie uns bitte bei der Übersetzung.",
   "setGenLocMsgLink": "App übersetzen",
@@ -362,16 +357,25 @@
   "setGenFontSizeNormal": "Standard",
   "setGenFontSizeLarge": "Groß",
   "setGenFontSizeLargest": "Größte",
+  "setGenTitlebarStyle": "Fenster-Stil (erfordert Neustart des Programms)",
+  "setGenTitlebarStyleDefault": "Standard",
+  "setGenTitlebarStyleHidden": "Eigener Titel",
+  "setGenTitlebarStyleHiddenInset": "Eigener Titel, verschiebbares Fenster",
   "setGenShowSubgroups": "Einträge aus allen Untergruppen anzeigen",
   "setGenTableView": "Einträge in Tabellenansicht anzeigen",
   "setGenColorfulIcons": "Eigene Icons in der Listenansicht farbig anzeigen",
   "setGenFunction": "Arbeitsweise",
   "setGenAutoSync": "Automatisch speichern und synchronisieren",
   "setGenRememberKeyFiles": "Schlüsseldateien merken",
+  "setGenNoRememberKeyFiles": "Nicht merken",
+  "setGenRememberKeyFilesData": "Im internen App-Speicher ablegen",
+  "setGenRememberKeyFilesPath": "Nur Speicherort der Schlüsseldateien merken",
   "setGenLockInactive": "Automatisch sperren, wenn die App inaktiv ist",
   "setGenNoAutoLock": "Nicht automatisch sperren",
   "setGenLockMinutes": "Nach {} Minuten",
   "setGenLockHour": "In einer Stunde",
+  "setGenLockHours": "Nach {} Stunden",
+  "setGenLockDay": "Nach einem Tag",
   "setGenClearClip": "Zwischenablage nach dem Kopieren leeren",
   "setGenNoClear": "Nicht leeren",
   "setGenClearSeconds": "In {} Sekunden",
@@ -379,6 +383,7 @@
   "setGenMinInstead": "App beim Schließen stattdessen minimieren",
   "setGenLockMinimize": "Beim Minimieren automatisch sperren",
   "setGenLockCopy": "Nach dem Kopieren eines Passworts automatisch sperren",
+  "setGenLockAutoType": "Automatisches Sperren bei Auto-Type",
   "setGenStorage": "Synchronisierung",
   "setGenShowAdvanced": "Erweiterte Einstellungen anzeigen",
   "setGenDevTools": "Entwicklerwerkzeuge anzeigen",
@@ -423,6 +428,10 @@
   "setFileBackupMonthly": "Monatlich",
   "setFileBackupManually": "Manuell, keine automatische Sicherung",
   "setFileRounds": "Verschlüsselungs-Runden",
+  "setFileKdfParams": "Schlüsselableitungsfunktion",
+  "setFileKdfParamsIter": "Iterationen",
+  "setFileKdfParamsMem": "Speicher in KB",
+  "setFileKdfParamsPar": "Parallelismus",
   "setFileKeyChangeForce": "Hinweis zum Ändern des Schlüssels nach (Tagen)",
   "setFileUseKeyFile": "Schlüsseldatei benutzen",
   "setFileUseGenKeyFile": "Generierte Schlüsseldatei benutzen",
@@ -463,6 +472,29 @@
   "setShCopyUrlGlobal": "Website kopieren (wenn die App im Hintergrund ist)",
   "setShAutoTypeGlobal": "Auto-Type (wenn die App im Hintergrund ist)",
   "setShLock": "Datenbank sperren",
+  "setPlInstallTitle": "Neue Plugins installieren",
+  "setPlInstallDesc": "KeeWeb-Plugins fügen Funktionen, Themes und Sprachen zu KeeWeb hinzu. Plugins werden mit denselben Rechten ausgeführt wie KeeWeb selbst, sie können auf all Ihre Passwörter zugreifen oder diese ändern. Installieren Sie niemals Plugins, denen Sie nicht vertrauen.",
+  "setPlInstallLabel": "Plugin-URL",
+  "setPlInstallBtn": "Installieren",
+  "setPlInstallBtnProgress": "Installiere",
+  "setPlUninstallBtn": "Deinstallieren",
+  "setPlDisableBtn": "Deaktivieren",
+  "setPlEnableBtn": "Aktivieren",
+  "setPlUpdateBtn": "Aktualisieren",
+  "setPlLocaleBtn": "Diese Sprache aktivieren",
+  "setPlThemeBtn": "Dieses Theme aktivieren",
+  "setPlJs": "Code",
+  "setPlCss": "Stile",
+  "setPlLoc": "Sprache",
+  "setPlCreatedBy": "Erstellt von {}",
+  "setPlLoadTime": "geladen in {}",
+  "setPlLastUpdate": "Letzte Prüfung auf Updates",
+  "setPlLoadError": "Fehler beim Laden des Plugins",
+  "setPlGalleryLoading": "Plugins werden geladen, bitte warten Sie einen Moment",
+  "setPlGalleryLoadError": "Fehler beim Laden der Plugins",
+  "setPlInstallUrlTitle": "Plugin von einer URL hinzufügen",
+  "setPlInstallUrlDesc": "Wenn das Plugin nicht in der Galerie verfügbar ist, können Sie es manuell von einer URL installieren",
+  "setPlOfficial": "Offizielles KeeWeb-Plugin",
   "setAboutTitle": "Über",
   "setAboutBuilt": "Diese App wurde mit den folgenden Werkzeugen erstellt",
   "setAboutLic": "Lizenz",
@@ -503,8 +535,11 @@
   "dropboxFolderPlaceholder": "Standard-Ordner",
   "dropboxLink": "App verlinken mit",
   "dropboxLinkApp": "App-Ordner (Apps/KeeWeb)",
-  "dropboxLinkFull": "Gesamte Dropbox oder beliebiger ORdner",
+  "dropboxLinkFull": "Gesamte Dropbox oder beliebiger Ordner",
   "dropboxLinkCustom": "Eigene Dropbox-App",
+  "webdavSaveMethod": "Speichermethode",
+  "webdavSaveMove": "Eine temporäre Datei hochladen und verschieben",
+  "webdavSavePut": "kdbx-Datei mittels PUT überschreiben",
   "launcherSave": "Passwort-Datenbank speichern",
   "launcherFileFilter": "KeePass-Dateien",
   "authPopupRequired": "Pop-Ups blockiert",
