--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -1,16 +1,4 @@
 {
-  "appTabWarn": "Demasiadas pestañas",
-  "appTabWarnBody": "KeeWeb no se puede utilizar en dos pestañas a la vez, por favor, cierra esta pestaña.",
-  "setGenThemeTe": "Terminal",
-  "setGenNoRememberKeyFiles": "No recordar",
-  "setGenRememberKeyFilesData": "Guardar en el almacenamiento interno",
-  "setGenRememberKeyFilesPath": "Recordar solo la ruta de archivos llave",
-  "setGenLockHours": "En {} horas",
-  "setGenLockDay": "En un día",
-  "setFileKdfParamsIter": "Iteraciones",
-  "setFileKdfParamsMem": "Memoria, KB",
-  "setFileKdfParams": "Función de derivación de clave",
-  "setFileKdfParamsPar": "Paralelismo",
   "months": [
     "Enero",
     "Febrero",
@@ -70,6 +58,8 @@
   "group": "Grupo",
   "noTitle": "sin título",
   "or": "o",
+  "history": "historial",
+  "template": "plantilla",
   "notImplemented": "No implementado",
   "saveChanges": "Guardar cambios",
   "discardChanges": "Descartar cambios",
@@ -77,7 +67,7 @@
   "shortcuts": "Atajos",
   "help": "Ayuda",
   "settings": "Opciones",
-  "history": "historial",
+  "plugins": "Componentes",
   "cache": "caché",
   "file": "Archivo",
   "webdav": "WebDAV",
@@ -162,6 +152,9 @@
   "listNoWebsite": "Sin web",
   "listNoUser": "sin usuario",
   "listNoAttachments": "sin adjuntos",
+  "listAddTemplateHeader": "Plantillas",
+  "listAddTemplateBody1": "Las plantillas te permiten crear entradas con un solo clic. Añade algo a la plantilla de entrada y después haz clic sobre {} de nuevo para usar esta plantilla.",
+  "listAddTemplateBody2": "Podrás encontrar tus plantillas en el grupo {}.",
   "searchAddNew": "Añadir nueva",
   "searchSort": "Ordenar",
   "searchCreated": "Creada",
@@ -192,9 +185,6 @@
   "openFailedRead": "Error al leer el archivo",
   "openNothingFound": "Nada encontrado",
   "openNothingFoundBody": "No hay archivos que puedan ser abiertos",
-  "openNothingFoundBodyFolder": "Los archivos se buscan en la carpeta {}",
-  "openAppFolder": "aplicación",
-  "openRootFolder": "raíz",
   "openSelectFile": "Selecciona un archivo",
   "openSelectFileBody": "Selecciona el archivo que quieres abrir",
   "openPassFor": "Contraseña para",
@@ -269,6 +259,7 @@
   "detClone": "Hacer una copia",
   "detClonedName": "Copiar",
   "detAutoType": "Autocompletado",
+  "detAutoTypeSettings": "Opciones de auto-tecleo",
   "detAutoTypeEnabled": "Activar autocompletado para esta entrada",
   "detAutoTypeSequence": "Tecleos",
   "detAutoTypeInput": "Entrada",
@@ -304,7 +295,6 @@
   "autoTypeHeader": "Autocompletado: Seleccionar",
   "autoTypeMsgNoWindow": "No hemos podido obtener el título de la ventana activa, tecléalo o búscalo",
   "autoTypeMsgMatchedByWindow": "Seleccionar una contraseña para {}",
-  "autoTypeClearFilter": "mostrar todas las entradas",
   "autoTypeNoMatches": "sin coincidencias",
   "appSecWarn": "¡No seguro!",
   "appSecWarnBody1": "Has cargado esta aplicación con una conexión insegura. Alguien podría estar rastreándote y robando tus contraseñas. Te sugerimos encarecidamente no continuar, a no ser que comprendas perfectamente lo que estás haciendo.",
@@ -321,6 +311,9 @@
   "appSaveErrorBodyMul": "Fallo al auto-guardar archivos:",
   "appSettingsError": "Error cargando aplicación",
   "appSettingsErrorBody": "Hubo un error cargando los ajustes de la aplicación. Por favor, vuelve a comprobar la url de la aplicación o contacta con tu administrador.",
+  "appNotSupportedError": "Tu navegador no está soportado.",
+  "appTabWarn": "Demasiadas pestañas",
+  "appTabWarnBody": "KeeWeb no se puede utilizar en dos pestañas a la vez, por favor, cierra esta pestaña.",
   "setGenTitle": "Opciones generales",
   "setGenUpdate": "Actualizar",
   "setGenNewVersion": "Nueva versión de aplicación liberada y descargada",
@@ -350,11 +343,13 @@
   "setGenThemeFb": "Azul plano",
   "setGenThemeDb": "Marrón oscuro",
   "setGenThemeWh": "Blanco",
+  "setGenThemeTe": "Terminal",
   "setGenThemeHc": "Alto contraste",
   "setGenThemeSd": "Solarizado oscuro",
   "setGenThemeSl": "Solarizado claro",
   "setGenLocale": "Idioma",
   "setGenLocImprove": "traduce esta aplicación a tu idioma",
+  "setGenLocOther": "otros idiomas están disponibles como componentes",
   "setGenLocMsg": "Ayuda a traducir KeeWeb",
   "setGenLocMsgBody": "Si deseas ver KeeWeb en tu idioma, por favor, ayúdanos con la traducción.",
   "setGenLocMsgLink": "Traducir esta aplicación",
@@ -362,16 +357,25 @@
   "setGenFontSizeNormal": "Normal",
   "setGenFontSizeLarge": "Grande",
   "setGenFontSizeLargest": "Muy grande",
+  "setGenTitlebarStyle": "Apariencia de ventana (requiere reinicio)",
+  "setGenTitlebarStyleDefault": "Por defecto",
+  "setGenTitlebarStyleHidden": "Título personalizado",
+  "setGenTitlebarStyleHiddenInset": "Título personalizado, ventana arrastrable",
   "setGenShowSubgroups": "Mostrar entradas de todos los subgrupos",
   "setGenTableView": "Vista de tabla de lista de entradas",
   "setGenColorfulIcons": "Iconos coloridos customizados en lista",
   "setGenFunction": "Función",
   "setGenAutoSync": "Guardar y sincronizar automáticamente",
   "setGenRememberKeyFiles": "Recordar archivos llave",
+  "setGenNoRememberKeyFiles": "No recordar",
+  "setGenRememberKeyFilesData": "Guardar en el almacenamiento interno",
+  "setGenRememberKeyFilesPath": "Recordar solo la ruta de archivos llave",
   "setGenLockInactive": "Auto-bloquear si la aplicación está inactiva",
   "setGenNoAutoLock": "No auto-bloquear",
   "setGenLockMinutes": "En {} minutos",
   "setGenLockHour": "En una hora",
+  "setGenLockHours": "En {} horas",
+  "setGenLockDay": "En un día",
   "setGenClearClip": "Limpiar portapapeles tras copia",
   "setGenNoClear": "No limpiar",
   "setGenClearSeconds": "En {} segundos",
@@ -379,6 +383,7 @@
   "setGenMinInstead": "Minimizar aplicación en vez de cerrar",
   "setGenLockMinimize": "Auto-bloquear al minimizar",
   "setGenLockCopy": "Auto-bloquear al copiar contraseña",
+  "setGenLockAutoType": "Auto-bloquear en auto-tecleo",
   "setGenStorage": "Almacenamiento",
   "setGenShowAdvanced": "Mostrar opciones avanzadas",
   "setGenDevTools": "Mostrar herramientas de desarrollador",
@@ -423,6 +428,10 @@
   "setFileBackupMonthly": "Mensual",
   "setFileBackupManually": "Manualmente, sin auto-respaldo",
   "setFileRounds": "Rondas de cifrado de clave",
+  "setFileKdfParams": "Función de derivación de clave",
+  "setFileKdfParamsIter": "Iteraciones",
+  "setFileKdfParamsMem": "Memoria, KB",
+  "setFileKdfParamsPar": "Paralelismo",
   "setFileKeyChangeForce": "Preguntar cambio de clave tras (días)",
   "setFileUseKeyFile": "Usar archivo llave",
   "setFileUseGenKeyFile": "Usar archivo llave generado",
@@ -463,6 +472,30 @@
   "setShCopyUrlGlobal": "copiar sitio web (con la aplicación en segundo plano)",
   "setShAutoTypeGlobal": "autocompletado (con la aplicación en segundo plano)",
   "setShLock": "bloquear base de datos",
+  "setPlInstallTitle": "Instalar nuevos componentes",
+  "setPlInstallDesc": "Los componentes de KeeWeb añaden características, temas e idiomas a KeeWeb. Los componentes se ejecutan con los mismos privilegios que KeeWeb y pueden acceder y gestionar tus contraseñas. Nunca instales componentes en los que no confíes.",
+  "setPlInstallLabel": "URL del componente",
+  "setPlInstallBtn": "Instalar",
+  "setPlInstallBtnProgress": "Instalando",
+  "setPlUninstallBtn": "Desinstalar",
+  "setPlDisableBtn": "Deshabilitar",
+  "setPlEnableBtn": "Habilitar",
+  "setPlUpdateBtn": "Actualizar",
+  "setPlLocaleBtn": "Cambiar a este idioma",
+  "setPlThemeBtn": "Cambiar a este tema",
+  "setPlJs": "código",
+  "setPlCss": "estilos",
+  "setPlLoc": "idioma",
+  "setPlCreatedBy": "Creado por {}",
+  "setPlLoadTime": "ha tardado {} en cargar",
+  "setPlLastUpdate": "Última vez comprobado",
+  "setPlLoadError": "error cargando componente",
+  "setPlGalleryLoading": "Cargando componentes, por favor, espera un poco",
+  "setPlGalleryLoadError": "Error cargando componentes",
+  "setPlInstallUrlTitle": "Añadir componente desde URL",
+  "setPlInstallUrlDesc": "Si el componente no está en la galería, puedes instalarlo manualmente desde una URL",
+  "setPlOfficial": "Componente Oficial de KeeWeb",
+  "setPlSearch": "Buscar componentes",
   "setAboutTitle": "Acerca de",
   "setAboutBuilt": "Esta aplicación está hecha con estas magníficas utilidades",
   "setAboutLic": "Licencia",
@@ -505,6 +538,9 @@
   "dropboxLinkApp": "Carpeta de aplicación (Apps/KeeWeb)",
   "dropboxLinkFull": "Todo Dropbox o cualquier carpeta",
   "dropboxLinkCustom": "Aplicación Dropbox propia",
+  "webdavSaveMethod": "Modo de guardado",
+  "webdavSaveMove": "Subir un fichero temporal y mover",
+  "webdavSavePut": "Sobreescribir fichero kdbx con PUT",
   "launcherSave": "Guardar base de datos de contraseñas",
   "launcherFileFilter": "Archivos KeePass",
   "authPopupRequired": "Las ventanas emergentes están bloqueadas",
