--- a/docs/translations/it-IT/it-IT.json
+++ b/docs/translations/it-IT/it-IT.json
@@ -1,16 +1,4 @@
 {
-  "appTabWarn": "Troppi pannelli",
-  "appTabWarnBody": "KeeWeb non può essere utilizzato in due pannelli contemporaneamente, per favore chiudi l'altro pannello.",
-  "setGenThemeTe": "Terminale",
-  "setGenNoRememberKeyFiles": "Non ricordare",
-  "setGenRememberKeyFilesData": "Salva nell'archivio interno dell'app",
-  "setGenRememberKeyFilesPath": "Ricorda solo i percorsi dei file chiave",
-  "setGenLockHours": "Per {} ore",
-  "setGenLockDay": "Un giorno",
-  "setFileKdfParamsIter": "Iterazioni",
-  "setFileKdfParamsMem": "Memoria, KB",
-  "setFileKdfParams": "Funzione di derivazione chiave",
-  "setFileKdfParamsPar": "Parallelismo",
   "months": [
     "Gennaio",
     "Febbraio",
@@ -70,6 +58,8 @@
   "group": "gruppo",
   "noTitle": "senza titolo",
   "or": "o",
+  "history": "cronologia",
+  "template": "modello",
   "notImplemented": "Non implementato",
   "saveChanges": "Salva le modifiche",
   "discardChanges": "Annulla le modifiche",
@@ -77,7 +67,7 @@
   "shortcuts": "Scorciatoie da tastiera",
   "help": "Aiuto",
   "settings": "Impostazioni",
-  "history": "cronologia",
+  "plugins": "Plugins",
   "cache": "cache",
   "file": "file",
   "webdav": "WebDAV",
@@ -90,12 +80,12 @@
   "menuSetGeneral": "Generale",
   "menuSetAbout": "Info",
   "menuAlertNoTags": "Nessun tag",
-  "menuAlertNoTagsBody": "Puoi aggiungere nuovi tag durante la modifica dei campi, nella sezione dei tag",
+  "menuAlertNoTagsBody": "Puoi aggiungere nuovi tag durante la modifica dei campi, nella sezione dei tag.",
   "menuEmptyTrash": "Svuota il cestino",
   "menuEmptyTrashAlert": "Svuotare il cestino?",
   "menuEmptyTrashAlertBody": "Non sarà possibile recuperare gli elementi",
   "menuItemCollapsed": "Fai doppio-click per espandere",
-  "alertYes": "Si",
+  "alertYes": "Sì",
   "alertNo": "No",
   "alertOk": "OK",
   "alertCancel": "Annulla",
@@ -162,6 +152,9 @@
   "listNoWebsite": "nessun sito",
   "listNoUser": "nessun utente",
   "listNoAttachments": "nessun allegato",
+  "listAddTemplateHeader": "Modelli",
+  "listAddTemplateBody1": "I modelli ti permettono di aggiungere delle voci con click. Aggiungi qualcosa al modello per la voce e poi fai di nuovo click su {} per usare questo modello.",
+  "listAddTemplateBody2": "Puoi sempre trovare i tuoi modelli nel gruppo {}.",
   "searchAddNew": "Nuovo",
   "searchSort": "Ordina",
   "searchCreated": "Creato",
@@ -192,9 +185,6 @@
   "openFailedRead": "file",
   "openNothingFound": "nessun risultato",
   "openNothingFoundBody": "Nessun file che potrebbe essere aperto",
-  "openNothingFoundBodyFolder": "I file sono cercati nella cartella {}",
-  "openAppFolder": "app",
-  "openRootFolder": "root",
   "openSelectFile": "file",
   "openSelectFileBody": "file",
   "openPassFor": "password per",
@@ -269,6 +259,7 @@
   "detClone": "Duplica",
   "detClonedName": "Copia",
   "detAutoType": "Scrittura automatica",
+  "detAutoTypeSettings": "Impostationi scrittura automatica",
   "detAutoTypeEnabled": "Abilita scrittura automatica per questa voce",
   "detAutoTypeSequence": "Sequenza tasti",
   "detAutoTypeInput": "Input",
@@ -304,7 +295,6 @@
   "autoTypeHeader": "Auto-Type: Seleziona",
   "autoTypeMsgNoWindow": "Non è stato possibile reperire il titolo della finestra attiva, inizia a digitare per cercare",
   "autoTypeMsgMatchedByWindow": "Seleziona una password per {}",
-  "autoTypeClearFilter": "visualizza tutte le voci",
   "autoTypeNoMatches": "nessuna corrispondenza",
   "appSecWarn": "Non sicuro!",
   "appSecWarnBody1": "Hai caricato questa applicazione con una connessione insicura. Qualcuno potrebbe spiarti e rubare le tue password. Consigliamo caldamente chiudere l'applicazione se non si comprende chiaramente cosa sta succedendo.",
@@ -321,6 +311,9 @@
   "appSaveErrorBodyMul": "Errore nel salvataggio automatico",
   "appSettingsError": "Errore di caricamento",
   "appSettingsErrorBody": "Si è verificato un errore nel caricamento delle impostazioni. Per favore, ricontrolla l'URL della app o contatta il tuo amministratore.",
+  "appNotSupportedError": "Il tuo browser non è supportato.",
+  "appTabWarn": "Troppi pannelli",
+  "appTabWarnBody": "KeeWeb non può essere utilizzato in due pannelli contemporaneamente, per favore chiudi l'altro pannello.",
   "setGenTitle": "Impostazioni generali",
   "setGenUpdate": "Aggiornamento",
   "setGenNewVersion": "Una nuova versione è stata rilasciata e scaricata",
@@ -350,11 +343,13 @@
   "setGenThemeFb": "Blu",
   "setGenThemeDb": "Marrone scuro",
   "setGenThemeWh": "Bianco",
+  "setGenThemeTe": "Terminale",
   "setGenThemeHc": "Alto contrasto",
   "setGenThemeSd": "Solarized dark",
   "setGenThemeSl": "Solarized light",
   "setGenLocale": "Lingua",
   "setGenLocImprove": "Traduci l'applicazione nella tua lingua",
+  "setGenLocOther": "altre lingue sono disponibili con i plugin",
   "setGenLocMsg": "Aiuta a tradurre KeeWeb",
   "setGenLocMsgBody": "Se ti piacerebbe vedere KeeWeb nella tua lingua, aiutaci con la traduzione.",
   "setGenLocMsgLink": "Traduci l'applicazione",
@@ -362,16 +357,25 @@
   "setGenFontSizeNormal": "Normale",
   "setGenFontSizeLarge": "Largo",
   "setGenFontSizeLargest": "Molto largo",
+  "setGenTitlebarStyle": "Stile della finestra (richiede il riavvio)",
+  "setGenTitlebarStyleDefault": "Default",
+  "setGenTitlebarStyleHidden": "Titolo personalizzato",
+  "setGenTitlebarStyleHiddenInset": "Titolo personalizzato, finestra spostabile",
   "setGenShowSubgroups": "Visualizza voci da tutti i sottogruppi",
   "setGenTableView": "Mostra le voci come una tabella",
   "setGenColorfulIcons": "Icone personalizzate colorate",
   "setGenFunction": "Funzionalità",
   "setGenAutoSync": "Salva e sincronizza automaticamente",
   "setGenRememberKeyFiles": "Ricorda i file chiave",
+  "setGenNoRememberKeyFiles": "Non ricordare",
+  "setGenRememberKeyFilesData": "Salva nell'archivio interno dell'app",
+  "setGenRememberKeyFilesPath": "Ricorda solo i percorsi dei file chiave",
   "setGenLockInactive": "Blocco automatico se l'applicazione è inattiva",
   "setGenNoAutoLock": "Non bloccare automaticamente",
   "setGenLockMinutes": "per {} minuti",
   "setGenLockHour": "In un'ora",
+  "setGenLockHours": "Per {} ore",
+  "setGenLockDay": "Un giorno",
   "setGenClearClip": "Pulisci gli appunti dopo la copia",
   "setGenNoClear": "Non ripulire",
   "setGenClearSeconds": "In {} secondi",
@@ -379,6 +383,7 @@
   "setGenMinInstead": "Minimizzare l'app anziché chiuderla",
   "setGenLockMinimize": "Blocco automatico al minimizzare",
   "setGenLockCopy": "Blocco automatico su copia password",
+  "setGenLockAutoType": "Blocco automatico su scrittura automatica",
   "setGenStorage": "Archivio",
   "setGenShowAdvanced": "Mostra impostazioni avanzate",
   "setGenDevTools": "Mostra dev tools",
@@ -423,6 +428,10 @@
   "setFileBackupMonthly": "Mensile",
   "setFileBackupManually": "Manuale, nessun backup automatico",
   "setFileRounds": "Giri di crittografia chiave",
+  "setFileKdfParams": "Funzione di derivazione chiave",
+  "setFileKdfParamsIter": "Iterazioni",
+  "setFileKdfParamsMem": "Memoria, KB",
+  "setFileKdfParamsPar": "Parallelismo",
   "setFileKeyChangeForce": "Chiedi di cambiare la chiave dopo (giorni)",
   "setFileUseKeyFile": "Utilizza file chiave",
   "setFileUseGenKeyFile": "Usa il file chiave generato",
@@ -463,6 +472,30 @@
   "setShCopyUrlGlobal": "Copia indirizzo web (quando l'applicazione è in background)",
   "setShAutoTypeGlobal": "Digita automaticamente (quando l'applicazione è in background)",
   "setShLock": "Blocca il database",
+  "setPlInstallTitle": "Installa nuovi plugin",
+  "setPlInstallDesc": "I plugin di KeeWeb aggiungono funzionalità, temi e lingue a KeeWeb. I plugin vengono eseguiti con gli stessi privilegi di KeeWeb, possono accedere a e gestile le tue password. Non installare mai un plugin di cui non ti fidi.",
+  "setPlInstallLabel": "URL del plugin",
+  "setPlInstallBtn": "Installa",
+  "setPlInstallBtnProgress": "Installando",
+  "setPlUninstallBtn": "Disinstalla",
+  "setPlDisableBtn": "Disabilita",
+  "setPlEnableBtn": "Abilita",
+  "setPlUpdateBtn": "Aggiorna",
+  "setPlLocaleBtn": "Imposta questa lingua",
+  "setPlThemeBtn": "Usa questo tema",
+  "setPlJs": "codice",
+  "setPlCss": "stili",
+  "setPlLoc": "lingua",
+  "setPlCreatedBy": "Creato da {}",
+  "setPlLoadTime": "ha richiesto {} per caricarsi",
+  "setPlLastUpdate": "Ultimo controllo aggiornamenti",
+  "setPlLoadError": "errore di caricamento plugin",
+  "setPlGalleryLoading": "Caricamento plugin, attendere un momento per favore",
+  "setPlGalleryLoadError": "Errore di caricamento plugin",
+  "setPlInstallUrlTitle": "Aggiungi plugin dall'URL",
+  "setPlInstallUrlDesc": "Se il plugin non è nella galleria, lo puoi installare manualmente dall'URL",
+  "setPlOfficial": "Plugin KeeWeb ufficiale",
+  "setPlSearch": "Cerca plugin",
   "setAboutTitle": "Info su",
   "setAboutBuilt": "Questa applicazione è fatta con questi magnifici strumenti",
   "setAboutLic": "Licenza",
@@ -505,6 +538,9 @@
   "dropboxLinkApp": "Cartella app (Apps/KeeWeb)",
   "dropboxLinkFull": "Intero Dropbox o qualsiasi cartella",
   "dropboxLinkCustom": "Propria app Dropbox",
+  "webdavSaveMethod": "Metodo di salvataggio",
+  "webdavSaveMove": "Carica un file temporaneo e spostalo",
+  "webdavSavePut": "Sovrascrivi il file kdbx con PUT",
   "launcherSave": "Salva il database delle password",
   "launcherFileFilter": "File KeePass",
   "authPopupRequired": "I pop-up sono bloccati",
