--- a/docs/translations/ko/ko.json
+++ b/docs/translations/ko/ko.json
@@ -1,16 +1,4 @@
 {
-  "appTabWarn": "너무 많은 탭",
-  "appTabWarnBody": "KeeWeb은 두 개의 브라우저 탭에서 동시에 사용할 수 없으므로 이 탭을 닫으십시오.",
-  "setGenThemeTe": "터미널",
-  "setGenNoRememberKeyFiles": "기억하지 않음",
-  "setGenRememberKeyFilesData": "내부 앱 저장소에 저장",
-  "setGenRememberKeyFilesPath": "키 파일 경로만 기억",
-  "setGenLockHours": "{} 시간 동안",
-  "setGenLockDay": "하루 동안",
-  "setFileKdfParamsIter": "반복",
-  "setFileKdfParamsMem": "메모리 (KB)",
-  "setFileKdfParams": "키 파생 함수",
-  "setFileKdfParamsPar": "병렬",
   "months": [
     "1월",
     "2월",
@@ -70,6 +58,8 @@
   "group": "그룹",
   "noTitle": "제목 없음",
   "or": "또는",
+  "history": "이력",
+  "template": "템플릿",
   "notImplemented": "구현되지 않음",
   "saveChanges": "변경 사항 저장",
   "discardChanges": "변경 사항 취소",
@@ -77,7 +67,7 @@
   "shortcuts": "바로 가기",
   "help": "도움말",
   "settings": "설정",
-  "history": "이력",
+  "plugins": "플러그인",
   "cache": "캐시",
   "file": "파일",
   "webdav": "WebDAV",
@@ -162,6 +152,9 @@
   "listNoWebsite": "웹사이트 없음",
   "listNoUser": "사용자 없음",
   "listNoAttachments": "첨부 파일 없음",
+  "listAddTemplateHeader": "템플릿",
+  "listAddTemplateBody1": "템플릿을 사용하면 클릭 한 번으로 항목을 만들 수 있습니다. 템플리트 항목에 무언가를 추가 한 다음 {}을 다시 클릭하여이 템플릿을 사용하십시오.",
+  "listAddTemplateBody2": "{} 그룹에서 언제든지 템플릿을 찾을 수 있습니다.",
   "searchAddNew": "새로 추가",
   "searchSort": "정렬",
   "searchCreated": "생성일자",
@@ -192,9 +185,6 @@
   "openFailedRead": "파일 읽기 실패",
   "openNothingFound": "아무것도 찾을 수 없음",
   "openNothingFoundBody": "열 수 있는 파일이 없습니다.",
-  "openNothingFoundBodyFolder": "파일은 {} 폴더 내에서 검색됩니다.",
-  "openAppFolder": "앱",
-  "openRootFolder": "루트",
   "openSelectFile": "파일 선택",
   "openSelectFileBody": "열려고하는 파일을 선택하십시오.",
   "openPassFor": "비밀번호",
@@ -269,6 +259,7 @@
   "detClone": "복사본 생성",
   "detClonedName": "복사",
   "detAutoType": "자동 채우기",
+  "detAutoTypeSettings": "자동 채우기 설정",
   "detAutoTypeEnabled": "이 항목에 자동 채우기 사용",
   "detAutoTypeSequence": "키 입력",
   "detAutoTypeInput": "입력",
@@ -304,7 +295,6 @@
   "autoTypeHeader": "자동 채우기: 선택",
   "autoTypeMsgNoWindow": "활성 창 제목을 가져올 수 없어 검색을 위해 입력을 시작했습니다.",
   "autoTypeMsgMatchedByWindow": "{}의 비밀번호 선택",
-  "autoTypeClearFilter": "모든 항목 보이기",
   "autoTypeNoMatches": "일치하는 항목 없음",
   "appSecWarn": "안전하지 않음!",
   "appSecWarnBody1": "안전하지 않은 연결로 이 앱을 로드했습니다. 누군가 당신을 보고 암호를 훔쳐 갈 수 있습니다. 자신이 하는 일을 분명히 이해하지 않는 한, 그만 두는 것이 좋습니다.",
@@ -321,6 +311,9 @@
   "appSaveErrorBodyMul": "자동 저장 실패한 파일:",
   "appSettingsError": "앱 로딩 오류",
   "appSettingsErrorBody": "앱 설정을로드하는 중에 오류가 발생했습니다. 앱 URL을 다시 확인하거나 관리자에게 문의하십시오.",
+  "appNotSupportedError": "브라우저가 지원되지 않습니다.",
+  "appTabWarn": "너무 많은 탭",
+  "appTabWarnBody": "KeeWeb은 두 개의 브라우저 탭에서 동시에 사용할 수 없으므로 이 탭을 닫으십시오.",
   "setGenTitle": "일반 설정",
   "setGenUpdate": "업데이트",
   "setGenNewVersion": "새 앱 버전이 출시되어 다운로드되었습니다.",
@@ -350,11 +343,13 @@
   "setGenThemeFb": "플랫 블루",
   "setGenThemeDb": "다크 브라운",
   "setGenThemeWh": "화이트",
+  "setGenThemeTe": "터미널",
   "setGenThemeHc": "고 대비",
   "setGenThemeSd": "솔라이즈드 다크",
   "setGenThemeSl": "솔라이즈드 라이트",
   "setGenLocale": "언어",
   "setGenLocImprove": "앱을 귀하의 언어로 번역하십시오.",
+  "setGenLocOther": "플러그인으로 다른 언어를 사용할 수 있습니다.",
   "setGenLocMsg": "KeeWeb 번역 도움말",
   "setGenLocMsgBody": "KeeWeb을 귀하의 언어로보고 싶다면 번역에 협조하십시오.",
   "setGenLocMsgLink": "앱 번역",
@@ -362,16 +357,25 @@
   "setGenFontSizeNormal": "보통",
   "setGenFontSizeLarge": "크게",
   "setGenFontSizeLargest": "가장 크게",
+  "setGenTitlebarStyle": "창 스타일 (다시 시작해야 함)",
+  "setGenTitlebarStyleDefault": "기본",
+  "setGenTitlebarStyleHidden": "사용자정의 제목",
+  "setGenTitlebarStyleHiddenInset": "사용자 정의 제목, 드래그 가능한 창",
   "setGenShowSubgroups": "모든 하위 그룹의 항목 표시",
   "setGenTableView": "항목 목록 테이블 형식으로 보기",
   "setGenColorfulIcons": "목록에 다채로운 사용자 정의 아이콘",
   "setGenFunction": "기능",
   "setGenAutoSync": "자동 저장 및 동기화",
   "setGenRememberKeyFiles": "키 파일 기억하기",
+  "setGenNoRememberKeyFiles": "기억하지 않음",
+  "setGenRememberKeyFilesData": "내부 앱 저장소에 저장",
+  "setGenRememberKeyFilesPath": "키 파일 경로만 기억",
   "setGenLockInactive": "앱이 비활성 상태인 경우 자동 잠금",
   "setGenNoAutoLock": "자동 잠금 안함",
   "setGenLockMinutes": "{} 분 후",
   "setGenLockHour": "1 시간 후",
+  "setGenLockHours": "{} 시간 동안",
+  "setGenLockDay": "하루 동안",
   "setGenClearClip": "복사 후 클립보드 지우기",
   "setGenNoClear": "지우지 않음",
   "setGenClearSeconds": "{} 초 후",
@@ -379,6 +383,7 @@
   "setGenMinInstead": "닫기 대신 앱 최소화",
   "setGenLockMinimize": "최소화 시 자동 잠금",
   "setGenLockCopy": "암호 사본에 자동 잠금",
+  "setGenLockAutoType": "자동 채우기의 자동 잠금",
   "setGenStorage": "저장소",
   "setGenShowAdvanced": "고급 설정 보이기",
   "setGenDevTools": "개발 도구 보이기",
@@ -423,6 +428,10 @@
   "setFileBackupMonthly": "월마다",
   "setFileBackupManually": "수동으로, 자동 백업 없음",
   "setFileRounds": "키 암호화 라운드",
+  "setFileKdfParams": "키 파생 함수",
+  "setFileKdfParamsIter": "반복",
+  "setFileKdfParamsMem": "메모리 (KB)",
+  "setFileKdfParamsPar": "병렬",
   "setFileKeyChangeForce": "키 변경 요청 주기 (일):",
   "setFileUseKeyFile": "키 파일 사용",
   "setFileUseGenKeyFile": "생성된 키 파일 사용",
@@ -463,6 +472,30 @@
   "setShCopyUrlGlobal": "웹사이트 복사 (앱이 백그라운드 일 때)",
   "setShAutoTypeGlobal": "자동 채우기 (앱이 백그라운드 일 때)",
   "setShLock": "데이터베이스 잠그기",
+  "setPlInstallTitle": "새 플러그인 설치",
+  "setPlInstallDesc": "KeeWeb 플러그인은 KeeWeb에 기능, 테마 및 언어를 추가합니다. KeeWeb과 동일한 권한으로 실행되는 플러그인은 모든 비밀번호를 액세스하고 관리 할 수 있습니다. 신뢰할 수없는 플러그인을 설치하지 마십시오.",
+  "setPlInstallLabel": "플러그인 URL",
+  "setPlInstallBtn": "설치",
+  "setPlInstallBtnProgress": "설치 중",
+  "setPlUninstallBtn": "제거",
+  "setPlDisableBtn": "사용 안함",
+  "setPlEnableBtn": "사용",
+  "setPlUpdateBtn": "업데이트",
+  "setPlLocaleBtn": "이 언어로 전환",
+  "setPlThemeBtn": "이 테마로 전환",
+  "setPlJs": "코드",
+  "setPlCss": "스타일",
+  "setPlLoc": "언어",
+  "setPlCreatedBy": "작성자 {}",
+  "setPlLoadTime": "로드하는데 {} 소요됨",
+  "setPlLastUpdate": "마지막 업데이트 확인",
+  "setPlLoadError": "플러그인 로드 오류",
+  "setPlGalleryLoading": "플러그인로드 중입니다. 조금 기다려주세요.",
+  "setPlGalleryLoadError": "플러그인 로드 오류",
+  "setPlInstallUrlTitle": "URL에서 플러그인 추가",
+  "setPlInstallUrlDesc": "플러그인이 갤러리에 없으면 URL에서 수동으로 설치할 수 있습니다.",
+  "setPlOfficial": "공식 KeeWeb 플러그인",
+  "setPlSearch": "플러그인 검색",
   "setAboutTitle": "대하여",
   "setAboutBuilt": "이 앱은이 멋진 도구로 제작되었습니다.",
   "setAboutLic": "저작권",
@@ -505,6 +538,9 @@
   "dropboxLinkApp": "앱 폴더 (Apps/KeeWeb)",
   "dropboxLinkFull": "전체 Dropbox 또는 폴더",
   "dropboxLinkCustom": "자신의 Dropbox 앱",
+  "webdavSaveMethod": "저장 방법",
+  "webdavSaveMove": "임시 파일 업로드 및 이동",
+  "webdavSavePut": "PUT을 사용하여 kdbx 파일 덮어 쓰기",
   "launcherSave": "암호 데이터베이스 저장",
   "launcherFileFilter": "KeePass 파일",
   "authPopupRequired": "팝업이 차단되었습니다.",
