--- a/docs/translations/no/no.json
+++ b/docs/translations/no/no.json
@@ -1,16 +1,4 @@
 {
-  "appTabWarn": "For mange faner",
-  "appTabWarnBody": "KeeWeb kan ikke brukes i to nettleser-faner samtidig, vennligst lukk denne fanen.",
-  "setGenThemeTe": "Terminal",
-  "setGenNoRememberKeyFiles": "Ikke husk",
-  "setGenRememberKeyFilesData": "Lagre i det interne app-minnet",
-  "setGenRememberKeyFilesPath": "Husk kun sti til nøkkelfiler",
-  "setGenLockHours": "i {} timer",
-  "setGenLockDay": "i en dag",
-  "setFileKdfParamsIter": "iterasjoner",
-  "setFileKdfParamsMem": "Minne, KB",
-  "setFileKdfParams": "Nøkkelutledningsfunksjon",
-  "setFileKdfParamsPar": "Parallellisering",
   "months": [
     "Januar",
     "Februar",
@@ -46,7 +34,7 @@
     "Onsdag",
     "Torsdag",
     "Fredag",
-    "Søndag"
+    "Lørdag"
   ],
   "weekdaysShort": [
     "Søn",
@@ -70,6 +58,8 @@
   "group": "Gruppe",
   "noTitle": "Ingen tittel",
   "or": "Eller",
+  "history": "Historie",
+  "template": "mal",
   "notImplemented": "Ikke implementert",
   "saveChanges": "Lagre endringer",
   "discardChanges": "Forkast endringer",
@@ -77,7 +67,6 @@
   "shortcuts": "Snarveier",
   "help": "Hjelp",
   "settings": "Innstillinger",
-  "history": "Historie",
   "cache": "Hurtiglager",
   "file": "Fil",
   "webdav": "WebDAV",
@@ -192,9 +181,6 @@
   "openFailedRead": "Feil ved å lese fil",
   "openNothingFound": "Ingenting funnet",
   "openNothingFoundBody": "Ingen filer kunne åpnes",
-  "openNothingFoundBodyFolder": "Filoppslag gjøres i mappen {}",
-  "openAppFolder": "app",
-  "openRootFolder": "rot",
   "openSelectFile": "Velg en fil",
   "openSelectFileBody": "Velg en fil du ønsker å åpne ",
   "openPassFor": "Passord for",
@@ -304,7 +290,6 @@
   "autoTypeHeader": "Autoinnfylling: Velg",
   "autoTypeMsgNoWindow": "Vi kunne ikke finne tittel på aktivt vindu, begynn å skrive for å søke",
   "autoTypeMsgMatchedByWindow": "Velg et passord for {}",
-  "autoTypeClearFilter": "vis alle oppføringer",
   "autoTypeNoMatches": "ingen samsvar",
   "appSecWarn": "Ikke sikkert!",
   "appSecWarnBody1": "Du har lastet appen med en usikker tilkobling. Noen kan overvåke deg og stjele dine passord. Vi anbefaler på det sterkeste at du avbryter, om du ikke klart forstår hva du gjør.",
@@ -321,6 +306,8 @@
   "appSaveErrorBodyMul": "Kunne ikke autolagre filer:",
   "appSettingsError": "Feil ved lasting av app",
   "appSettingsErrorBody": "Det skjedde en feil ved lasting av app-innstillinger. Vennligst dobbeltsjekk app-adressen, eller kontakt din administrator",
+  "appTabWarn": "For mange faner",
+  "appTabWarnBody": "KeeWeb kan ikke brukes i to nettleser-faner samtidig, vennligst lukk denne fanen.",
   "setGenTitle": "Generelle instillinger",
   "setGenUpdate": "Oppdatering",
   "setGenNewVersion": "Ny app-versjon har blitt utgitt og nedlastet",
@@ -350,6 +337,7 @@
   "setGenThemeFb": "Flat blå",
   "setGenThemeDb": "Mørk brun",
   "setGenThemeWh": "Hvit",
+  "setGenThemeTe": "Terminal",
   "setGenThemeHc": "Høykontrast",
   "setGenThemeSd": "Overeksponert mørk",
   "setGenThemeSl": "Overeksponert lys",
@@ -368,10 +356,15 @@
   "setGenFunction": "Funksjon",
   "setGenAutoSync": "Automatisk lagring og synkronisering",
   "setGenRememberKeyFiles": "Husk nøkkelfiler",
+  "setGenNoRememberKeyFiles": "Ikke husk",
+  "setGenRememberKeyFilesData": "Lagre i det interne app-minnet",
+  "setGenRememberKeyFilesPath": "Husk kun sti til nøkkelfiler",
   "setGenLockInactive": "Auto-lås hvis appen er inaktiv",
   "setGenNoAutoLock": "Ikke auto-lås",
   "setGenLockMinutes": "i {} minutter",
   "setGenLockHour": "i en time",
+  "setGenLockHours": "i {} timer",
+  "setGenLockDay": "i en dag",
   "setGenClearClip": "Tøm utklippstavle etter kopiering",
   "setGenNoClear": "Ikke tøm",
   "setGenClearSeconds": "etter {} sekunder",
@@ -423,6 +416,10 @@
   "setFileBackupMonthly": "Månedlig",
   "setFileBackupManually": "Manuelt, ingen auto-backup",
   "setFileRounds": "Nøkkelkrypterings-runder",
+  "setFileKdfParams": "Nøkkelutledningsfunksjon",
+  "setFileKdfParamsIter": "iterasjoner",
+  "setFileKdfParamsMem": "Minne, KB",
+  "setFileKdfParamsPar": "Parallellisering",
   "setFileKeyChangeForce": "Spør om å endre nøkkel etter (dager)",
   "setFileUseKeyFile": "Bruk nøkkelfil",
   "setFileUseGenKeyFile": "Bruk generert nøkkelfil",
