--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -1,16 +1,4 @@
 {
-  "appTabWarn": "Zbyt wiele kart",
-  "appTabWarnBody": "KeeWeb nie może być używany w dwóch kartach przeglądarki jednocześnie, proszę zamknąć tę kartę.",
-  "setGenThemeTe": "Terminal",
-  "setGenNoRememberKeyFiles": "Nie zapamiętuj",
-  "setGenRememberKeyFilesData": "Przechowuj w pamięci wewnętrznej aplikacji",
-  "setGenRememberKeyFilesPath": "Zapamiętaj tylko ścieżkę do plików klucza",
-  "setGenLockHours": "Przez {} godzin",
-  "setGenLockDay": "Przez dzień",
-  "setFileKdfParamsIter": "Iteracje",
-  "setFileKdfParamsMem": "Pamięć, KB",
-  "setFileKdfParams": "Funkcja derywacji klucza",
-  "setFileKdfParamsPar": "Pararelizm",
   "months": [
     "styczeń",
     "luty",
@@ -70,6 +58,8 @@
   "group": "Grupa",
   "noTitle": "Brak tytułu",
   "or": "albo",
+  "history": "Historia",
+  "template": "Szablon",
   "notImplemented": "Nie zaimplementowano",
   "saveChanges": "Zapisz zmiany",
   "discardChanges": "Odrzuć zmiany",
@@ -77,7 +67,7 @@
   "shortcuts": "Skróty",
   "help": "Pomoc",
   "settings": "Ustawienia",
-  "history": "Historia",
+  "plugins": "Wtyczki",
   "cache": "Cache",
   "file": "Plik",
   "webdav": "WebDAV",
@@ -162,6 +152,9 @@
   "listNoWebsite": "Brak strony WWW",
   "listNoUser": "Brak użytkownika",
   "listNoAttachments": "Brak załączników",
+  "listAddTemplateHeader": "Szablony",
+  "listAddTemplateBody1": "Szablony pozwalają na tworzenie wpisów za pomocą jednego kliknięcia. Dodaj coś do wpisu szablonu, a następnie kliknij {} ponownie, aby użyć tego szablonu.",
+  "listAddTemplateBody2": "Zawsze możesz znaleźć swoje szablony w grupie {}.",
   "searchAddNew": "Dodaj nowy",
   "searchSort": "Sortuj",
   "searchCreated": "Utworzono",
@@ -192,9 +185,6 @@
   "openFailedRead": "Nie można odczytać pliku",
   "openNothingFound": "Nic nie znaleziono",
   "openNothingFoundBody": "Brak plików do otworzenia.",
-  "openNothingFoundBodyFolder": "Pliki są wyszukiwane wewnątrz folderu {}",
-  "openAppFolder": "Aplikacja",
-  "openRootFolder": "Główny",
   "openSelectFile": "Wybierz plik",
   "openSelectFileBody": "Wybierz plik, który chcesz otworzyć",
   "openPassFor": "Hasło do",
@@ -269,6 +259,7 @@
   "detClone": "Stwórz kopię",
   "detClonedName": "Kopia",
   "detAutoType": "Auto-type",
+  "detAutoTypeSettings": "Ustawienia auto-type",
   "detAutoTypeEnabled": "Włącz auto-type dla tego wpisu",
   "detAutoTypeSequence": "Wciś. klawiszy",
   "detAutoTypeInput": "Wprowadz.",
@@ -304,7 +295,6 @@
   "autoTypeHeader": "Auto-type: wybierz",
   "autoTypeMsgNoWindow": "Nie mogliśmy uzyskać tytułu aktywnego okna. Zacznij pisać, aby wyszukać",
   "autoTypeMsgMatchedByWindow": "Wybierz hasło dla {}",
-  "autoTypeClearFilter": "Pokaż wszystkie wpisy",
   "autoTypeNoMatches": "Brak dopasowań",
   "appSecWarn": "Niezabezpieczone!",
   "appSecWarnBody1": "Załadowałeś tę aplikację poprzez niezabezpieczone połączenie. Ktoś może podglądać cię i wykradać twoje hasła. Bardzo zalecamy, abyś to przerwał, jeżeli nie rozumiesz, co robisz.",
@@ -321,6 +311,9 @@
   "appSaveErrorBodyMul": "Nie udało się autozapisywanie plików:",
   "appSettingsError": "Błąd ładowania aplikacji",
   "appSettingsErrorBody": "Wystąpił błąd podczas ładowania ustawień aplikacji. Proszę starannie sprawdzić URL aplikacji albo skontaktować się z administratorem.",
+  "appNotSupportedError": "Twoja przeglądarka nie jest obsługiwana.",
+  "appTabWarn": "Zbyt wiele kart",
+  "appTabWarnBody": "KeeWeb nie może być używany w dwóch kartach przeglądarki jednocześnie, proszę zamknąć tę kartę.",
   "setGenTitle": "Ustawienia ogólne",
   "setGenUpdate": "Aktualizacja",
   "setGenNewVersion": "Nowa wersja aplikacji została wydana i pobrana",
@@ -350,11 +343,13 @@
   "setGenThemeFb": "Płaski błękit",
   "setGenThemeDb": "Ciemny brąz",
   "setGenThemeWh": "Biel",
+  "setGenThemeTe": "Terminal",
   "setGenThemeHc": "Wysoki kontrast",
   "setGenThemeSd": "Solaryzowany ciemny",
   "setGenThemeSl": "Solaryzowany jasny",
   "setGenLocale": "Język",
   "setGenLocImprove": "Przetłumacz aplikację na twój język",
+  "setGenLocOther": "inne języki są dostępne jako wtyczki",
   "setGenLocMsg": "Pomóż w tłumaczeniu KeeWeb",
   "setGenLocMsgBody": "Jeżeli chciałbyś zobaczyć KeeWeb w twoim języku, proszę nam pomóc w tłumaczeniu.",
   "setGenLocMsgLink": "Przetłumacz aplikację",
@@ -362,16 +357,25 @@
   "setGenFontSizeNormal": "Normalny",
   "setGenFontSizeLarge": "Duży",
   "setGenFontSizeLargest": "Największy",
+  "setGenTitlebarStyle": "Styl okna (wymaga ponownego uruchomienia)",
+  "setGenTitlebarStyleDefault": "Domyślny",
+  "setGenTitlebarStyleHidden": "Niestandardowy tytuł",
+  "setGenTitlebarStyleHiddenInset": "Niestandardowy tytuł, przeciągalne okno",
   "setGenShowSubgroups": "Pokaż wpisy ze wszystkich podgrup",
   "setGenTableView": "Widok tabeli listy wpisów",
   "setGenColorfulIcons": "Kolorowe niestandardowe ikony na liście",
   "setGenFunction": "Działanie",
   "setGenAutoSync": "Automatycznie zapisuj i synchronizuj",
   "setGenRememberKeyFiles": "Zapamiętuj pliki kluczy",
+  "setGenNoRememberKeyFiles": "Nie zapamiętuj",
+  "setGenRememberKeyFilesData": "Przechowuj w pamięci wewnętrznej aplikacji",
+  "setGenRememberKeyFilesPath": "Zapamiętaj tylko ścieżkę do plików klucza",
   "setGenLockInactive": "Autoblokowanie, gdy aplikacja jest nieaktywna",
   "setGenNoAutoLock": "Wyłącz autoblokowanie",
   "setGenLockMinutes": "Przez {} minut",
   "setGenLockHour": "Przez godzinę",
+  "setGenLockHours": "Przez {} godzin",
+  "setGenLockDay": "Przez dzień",
   "setGenClearClip": "Wyczyść schowek po skopiowaniu",
   "setGenNoClear": "Nie czyść",
   "setGenClearSeconds": "Po {} sekundach",
@@ -379,6 +383,7 @@
   "setGenMinInstead": "Minimalizuj aplikację zamiast zamykania",
   "setGenLockMinimize": "Autoblokowanie po minimalizacji",
   "setGenLockCopy": "Autoblokowanie po skopiowaniu hasła",
+  "setGenLockAutoType": "Autoblokowanie przy auto-type",
   "setGenStorage": "Przechowywanie",
   "setGenShowAdvanced": "Pokaż zaawansowane ustawienia (mogą być niebezpieczne)",
   "setGenDevTools": "Pokaż narzędzia twórcy",
@@ -423,6 +428,10 @@
   "setFileBackupMonthly": "Miesięcznie",
   "setFileBackupManually": "Ręcznie, bez automatycznych kopii zapasowych",
   "setFileRounds": "Rundy transformacji klucza",
+  "setFileKdfParams": "Funkcja derywacji klucza",
+  "setFileKdfParamsIter": "Iteracje",
+  "setFileKdfParamsMem": "Pamięć, KB",
+  "setFileKdfParamsPar": "Pararelizm",
   "setFileKeyChangeForce": "Pytaj o zmianę klucza po (dni)",
   "setFileUseKeyFile": "Użyj pliku klucza",
   "setFileUseGenKeyFile": "Użyj wygenerowanego pliku klucza",
@@ -463,6 +472,30 @@
   "setShCopyUrlGlobal": "Skopiuj stronę WWW (gdy aplikacja jest w tle)",
   "setShAutoTypeGlobal": "Auto-type (gdy aplikacja jest w tle)",
   "setShLock": "Zablokuj bazę danych",
+  "setPlInstallTitle": "Zainstaluj nowe wtyczki",
+  "setPlInstallDesc": "Wtyczki KeeWeb dodają funkcje, motywy i języki do KeeWeb. Wtyczki działają z tymi samymi uprawnieniami co KeeWeb, mogą uzyskiwać dostęp do wszystkich twoich haseł i zarządzać nimi. Nigdy nie instaluj wtyczek, do których nie masz zaufania.",
+  "setPlInstallLabel": "URL wtyczki",
+  "setPlInstallBtn": "Zainstaluj",
+  "setPlInstallBtnProgress": "Instalowanie",
+  "setPlUninstallBtn": "Odinstaluj",
+  "setPlDisableBtn": "Wyłącz",
+  "setPlEnableBtn": "Włącz",
+  "setPlUpdateBtn": "Aktualizuj",
+  "setPlLocaleBtn": "Przełącz na ten język",
+  "setPlThemeBtn": "Przełącz na ten motyw",
+  "setPlJs": "kod",
+  "setPlCss": "style",
+  "setPlLoc": "język",
+  "setPlCreatedBy": "Stworzony przez {}",
+  "setPlLoadTime": "załadowano w {}",
+  "setPlLastUpdate": "Ostatnie sprawdzenie aktualizacji",
+  "setPlLoadError": "błąd ładowania wtyczki",
+  "setPlGalleryLoading": "Ładowanie wtyczek, proszę czekać",
+  "setPlGalleryLoadError": "Błąd wczytywania wtyczek",
+  "setPlInstallUrlTitle": "Dodaj wtyczkę z URL",
+  "setPlInstallUrlDesc": "Jeżeli w galerii nie ma wtyczki, możesz ją zainstalować ręcznie z URL",
+  "setPlOfficial": "Oficjalna wtyczka KeeWeb",
+  "setPlSearch": "Szukaj wtyczek",
   "setAboutTitle": "O",
   "setAboutBuilt": "Ta aplikacja jest zbudowana za pomocą tych wspaniałych narzędzi",
   "setAboutLic": "Licencja",
@@ -505,6 +538,9 @@
   "dropboxLinkApp": "Folderem aplikacji (Apps/KeeWeb)",
   "dropboxLinkFull": "Pełnym Dropboksem albo innym folderem",
   "dropboxLinkCustom": "Własną aplikacją Dropbox",
+  "webdavSaveMethod": "Metoda zapisu",
+  "webdavSaveMove": "Prześlij tymczasowy plik i przenieś",
+  "webdavSavePut": "Nadpisz plik kdbx przez PUT",
   "launcherSave": "Zapisz bazę danych haseł",
   "launcherFileFilter": "Pliki KeePass",
   "authPopupRequired": "Okna pop-up są zablokowane",
