--- a/docs/translations/zh-CN/zh-CN.json
+++ b/docs/translations/zh-CN/zh-CN.json
@@ -1,16 +1,4 @@
 {
-  "appTabWarn": "标签页过多",
-  "appTabWarnBody": "KeeWeb 不能同时在两个浏览器标签页中使用。请关闭这个标签页。",
-  "setGenThemeTe": "终端",
-  "setGenNoRememberKeyFiles": "不记忆",
-  "setGenRememberKeyFilesData": "保存在应用内",
-  "setGenRememberKeyFilesPath": "只记住密钥文件路径",
-  "setGenLockHours": "{} 个小时内",
-  "setGenLockDay": "一天内",
-  "setFileKdfParamsIter": "迭代次数",
-  "setFileKdfParamsMem": "内存占用，KB",
-  "setFileKdfParams": "密钥生成算法",
-  "setFileKdfParamsPar": "并行计算",
   "months": [
     "一月",
     "二月",
@@ -70,6 +58,8 @@
   "group": "分组",
   "noTitle": "无标题",
   "or": "或",
+  "history": "历史",
+  "template": "模版",
   "notImplemented": "未实现",
   "saveChanges": "保存更改",
   "discardChanges": "放弃更改",
@@ -77,7 +67,7 @@
   "shortcuts": "快捷键",
   "help": "帮助",
   "settings": "设置",
-  "history": "历史",
+  "plugins": "插件",
   "cache": "缓存",
   "file": "密码数据库",
   "webdav": "WebDAV",
@@ -162,6 +152,9 @@
   "listNoWebsite": "没有网站",
   "listNoUser": "没有用户名",
   "listNoAttachments": "没有附件",
+  "listAddTemplateHeader": "模版",
+  "listAddTemplateBody1": "模版使您能一键创建记录。在模版记录中添加内容然后再次点击 {} 以使用此模版。",
+  "listAddTemplateBody2": "您总能在{}分组中找到您的模版。",
   "searchAddNew": "新建",
   "searchSort": "排序",
   "searchCreated": "创建时间",
@@ -192,9 +185,6 @@
   "openFailedRead": "读取文件失败",
   "openNothingFound": "找不到内容",
   "openNothingFoundBody": "没有可以打开的文件。",
-  "openNothingFoundBodyFolder": "在{}文件夹中搜索了文件",
-  "openAppFolder": "应用",
-  "openRootFolder": "根",
   "openSelectFile": "选择一个文件",
   "openSelectFileBody": "选择您想打开的文件",
   "openPassFor": "输入密码",
@@ -269,6 +259,7 @@
   "detClone": "制作副本",
   "detClonedName": "复制",
   "detAutoType": "自动输入",
+  "detAutoTypeSettings": "自动键入设置",
   "detAutoTypeEnabled": "此记录启用自动输入",
   "detAutoTypeSequence": "按键",
   "detAutoTypeInput": "输入",
@@ -304,7 +295,6 @@
   "autoTypeHeader": "自动输入：选择",
   "autoTypeMsgNoWindow": "我们无法获取当前窗口的标题，请手动输入以搜索",
   "autoTypeMsgMatchedByWindow": "请选择一个密码以用于{}",
-  "autoTypeClearFilter": "显示所有记录",
   "autoTypeNoMatches": "无匹配",
   "appSecWarn": "不安全！",
   "appSecWarnBody1": "您已经通过不安全的连接加载当前应用，您有被监控和密码失窃的风险。我们强烈建议您停止使用，除非您清楚地了解自己在做什么。",
@@ -321,6 +311,9 @@
   "appSaveErrorBodyMul": "自动保存失败：",
   "appSettingsError": "载入应用时发生错误",
   "appSettingsErrorBody": "载入应用设置时发生错误。请再次检查应用网址或联系您的管理员。",
+  "appNotSupportedError": "您的浏览器不受支持。",
+  "appTabWarn": "标签页过多",
+  "appTabWarnBody": "KeeWeb 不能同时在两个浏览器标签页中使用。请关闭这个标签页。",
   "setGenTitle": "全局设置",
   "setGenUpdate": "更新",
   "setGenNewVersion": "新的应用版本已经发布并下载完毕",
@@ -350,11 +343,13 @@
   "setGenThemeFb": "蓝灰",
   "setGenThemeDb": "深棕",
   "setGenThemeWh": "白色",
+  "setGenThemeTe": "终端",
   "setGenThemeHc": "高对比度",
   "setGenThemeSd": "深绿",
   "setGenThemeSl": "浅绿",
   "setGenLocale": "语言",
   "setGenLocImprove": "将此应用翻译成您的语言",
+  "setGenLocOther": "其他语言可作为插件获得",
   "setGenLocMsg": "协助翻译 KeeWeb",
   "setGenLocMsgBody": "如果你想要 KeeWeb 使用您的语言，请协助我们翻译。",
   "setGenLocMsgLink": "翻译此应用",
@@ -362,16 +357,25 @@
   "setGenFontSizeNormal": "正常",
   "setGenFontSizeLarge": "大",
   "setGenFontSizeLargest": "最大",
+  "setGenTitlebarStyle": "窗口样式（需要重启）",
+  "setGenTitlebarStyleDefault": "默认",
+  "setGenTitlebarStyleHidden": "自定义标题",
+  "setGenTitlebarStyleHiddenInset": "自定义标题，可拖拽窗口",
   "setGenShowSubgroups": "显示所有子分组的记录",
   "setGenTableView": "以表格视图显示记录",
   "setGenColorfulIcons": "在列表中显示彩色图标",
   "setGenFunction": "功能",
   "setGenAutoSync": "自动保存和同步",
   "setGenRememberKeyFiles": "记住密钥文件",
+  "setGenNoRememberKeyFiles": "不记忆",
+  "setGenRememberKeyFilesData": "保存在应用内",
+  "setGenRememberKeyFilesPath": "只记住密钥文件路径",
   "setGenLockInactive": "此应用未聚焦时自动锁定",
   "setGenNoAutoLock": "不自动锁定",
   "setGenLockMinutes": "在 {} 分钟后",
   "setGenLockHour": "在 1 个小时后",
+  "setGenLockHours": "{} 个小时内",
+  "setGenLockDay": "一天内",
   "setGenClearClip": "复制后清除剪贴板",
   "setGenNoClear": "不清除",
   "setGenClearSeconds": "在 {} 秒后",
@@ -379,6 +383,7 @@
   "setGenMinInstead": "最小化此应用但不关闭",
   "setGenLockMinimize": "最小化时自动锁定",
   "setGenLockCopy": "复制密码时自动锁定",
+  "setGenLockAutoType": "自动输入时自动锁定",
   "setGenStorage": "存储",
   "setGenShowAdvanced": "显示高级设置",
   "setGenDevTools": "显示开发工具",
@@ -423,6 +428,10 @@
   "setFileBackupMonthly": "每月",
   "setFileBackupManually": "手动，不自动备份",
   "setFileRounds": "密钥加密遍数",
+  "setFileKdfParams": "密钥生成算法",
+  "setFileKdfParamsIter": "迭代次数",
+  "setFileKdfParamsMem": "内存占用，KB",
+  "setFileKdfParamsPar": "并行计算",
   "setFileKeyChangeForce": "多久后提示更改秘钥文件（天）",
   "setFileUseKeyFile": "使用密钥文件",
   "setFileUseGenKeyFile": "使用生成的密钥文件",
@@ -463,6 +472,27 @@
   "setShCopyUrlGlobal": "复制站点 (当应用在后台运行时)",
   "setShAutoTypeGlobal": "自动输入 (当应用在后台运行时)",
   "setShLock": "锁定数据库",
+  "setPlInstallTitle": "安装新插件",
+  "setPlInstallLabel": "插件 URL",
+  "setPlInstallBtn": "安装",
+  "setPlInstallBtnProgress": "安装中",
+  "setPlUninstallBtn": "卸载",
+  "setPlDisableBtn": "禁用",
+  "setPlEnableBtn": "启用",
+  "setPlUpdateBtn": "更新",
+  "setPlLocaleBtn": "切换到此语言",
+  "setPlThemeBtn": "切换到此主题",
+  "setPlCss": "样式",
+  "setPlLoc": "语言",
+  "setPlCreatedBy": "由 {} 创建",
+  "setPlLastUpdate": "上次检查更新",
+  "setPlLoadError": "载入插件时发生错误",
+  "setPlGalleryLoading": "载入插件中，请稍候",
+  "setPlGalleryLoadError": "载入插件时发生错误",
+  "setPlInstallUrlTitle": "从 URL 中添加插件",
+  "setPlInstallUrlDesc": "如果插件不在插件库中，您可以手动从 URL 中添加插件",
+  "setPlOfficial": "官方 KeeWeb 插件",
+  "setPlSearch": "搜索插件",
   "setAboutTitle": "关于",
   "setAboutBuilt": "此应用使用以下优秀工具构建",
   "setAboutLic": "许可",
@@ -505,6 +535,9 @@
   "dropboxLinkApp": "应用文件夹(Apps/KeeWeb)",
   "dropboxLinkFull": "整个 Dropbox 或者任意文件夹",
   "dropboxLinkCustom": "自有 Dropbox 应用",
+  "webdavSaveMethod": "保存方式",
+  "webdavSaveMove": "上传一个临时文件并移动",
+  "webdavSavePut": "以 PUT 方式覆盖文件",
   "launcherSave": "保存密码数据库",
   "launcherFileFilter": "KeePass 文件",
   "authPopupRequired": "弹出窗口已被阻止",
